# NovaCenica

./: pyproject.toml
novaCenica/: manage.py
novaCenica/core/: urls.py  views.py
novaCenica/core/templates/: TubeCenica.html  base_model.html  detail.html  home.html  index.html  tube_cenica.html
novaCenica/novaCenica/: asgi.py  settings.py  urls.py  wsgi.py
novaCenica/static/css/: styles.css
