[tool.poetry]
name = "novacenica"
version = "0.1.0"
description = "Projeto de site para produtora de videos"
authors = ["Joey-Resende <givanildo.resende@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
blue = "^0.8.0"
isort = "^5.10.1"
mkdocs = "^1.3.0"
prospector = "^1.7.7"
pip-audit = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
